--- a/src/mocks/user_settings.json
+++ b/src/mocks/user_settings.json
@@ -1,8 +1,6 @@
 {
-    "lists": [
-        {
-            "name": "List 1",
-            "product_codes": [729878639363]
-        }
-    ]
+    "lists": {
+        "List 1": ["020714291839", "045600019830"],
+        "List 2": ["078522021254"]
+    }
 }
