--- a/src/mocks/user_settings.json
+++ b/src/mocks/user_settings.json
@@ -1,6 +1,6 @@
 {
-    "lists": {
-        "List 1": ["020714291839", "045600019830"],
-        "List 2": ["078522021254"]
-    }
+    "lists": [
+        {"name": "List 1", "item_codes": ["020714291839", "045600019830"]},
+        {"name": "List 2", "item_codes": ["078522021254"]}
+    ]
 }
